--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "inquirer": "^7.1.0",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
+    "s3": "git://github.com/andrewrk/node-s3-client.git#0ed018699843a2d3cc1cb37399ead1f76a72576d",
     "yargs-parser": "^18.1.3"
   },
   "homepage": "https://github.com/contentful-userland/gatsby-contentful-starter#readme",
